# Chunky-Core

./: README.md  mypy.ini  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: mypy.yml
src/relic/chunky/core/: __init__.py  _abc.py  _apis.py  _core.py  _serializer.py  abstract.py  definitions.py  errors.py  filesystem.py  protocols.py  serialization.py  serializers.py
tests/: test_filesystem.py  test_regressions.py  test_serialization.py
tests/regressions/: test_version_comparisons.py
