[metadata]
name = relic-tool-chunky-core
version = attr: relic.chunky.core.__version__

author = Marcus Kertesz
; author_email = author@example.com
description = Core files used to read/write Relic Chunky files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ModernMAK/Relic-Tool-Chunky-Core
project_urls =
    Bug Tracker = https://github.com/ModernMAK/Relic-Tool-Chunky-Core/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9


install_requires =
    mak-serialization-tools

[options.packages.find]
where = src